# transformers

./: README.md  README_ko.md  README_zh-hans.md  README_zh-hant.md  rundeberta.py
docs/source/: _toctree.yml  index.mdx
jax/: Activation_Functions.ipynb  Inception_ResNet_DenseNet.ipynb  Transformers_and_MHAttention.ipynb  Untitled.ipynb  basics.ipynb  bug.py  dis_self_attn.ipynb  mlp.ipynb  pyproject.toml  transformers.ipynb
src/transformers/: __init__.py  integrations.py  trainer_utils.py
src/transformers/models/: __init__.py
src/transformers/models/auto/: configuration_auto.py  feature_extraction_auto.py  modeling_auto.py
src/transformers/models/deberta/: modeling_flax_deberta.py
src/transformers/models/resnet/: modeling_resnet.py
src/transformers/utils/: dummy_pt_objects.py
