[tool.poetry]
name = "jaxtut"
version = "0.1.0"
description = ""
authors = ["Sander Land <sander@chatdesk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8, <3.11"
jax = "^0.3.21"
jaxlib = "^0.3.20"
flax = "^0.6.1"
poetry-kernel = "^0.1.2"
jupyterlab = "^3.4.8"
tqdm = "^4.64.1"
matplotlib = "^3.6.1"
ipywidgets = "^8.0.2"
torch = "^1.12.1"
optax = "^0.1.3"
seaborn = "^0.12.0"
tensorboard = "^2.10.1"
torchvision = "^0.13.1"
datasets = "^2.6.0"
transformers = "^4.23.1"
evaluate = "^0.2.3"
tensorflow = "^2.10.0"
flaxmodels = "^0.1.2"
tabulate = "^0.9.0"
intel-extension-for-pytorch = "^1.12.300"


[tool.poetry.group.dev.dependencies]
poetry-kernel = "^0.1.2"
jupyterlab = "^3.4.8"
isort = "^5.10.1"
black = "^22.10.0"
jupyterlab-code-formatter = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
